# philo

./: CMakeLists.txt  a.out  main.c
includes/: philo_one.h
src/: ft_atoi.c  ft_itoa.c  ft_putchar_fd.c  ft_putstr_fd.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  init.c  life_simulation.c  print_error.c  validate.c
